--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "baml-py>=0.201.0",
+    "fastapi>=0.100.0",
+    "uvicorn>=0.23.0",
 ]
